[project]
name = "summer-modules"
dynamic = ["version"]
description = "summery233's python modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "summer-modules-core==1.1.0",
    "summer-modules-ai==1.1.0",
    "summer-modules-bot==1.1.0",
    "summer-modules-markdown==1.1.0",
    "summer-modules-charts==1.1.0",
    "summer-modules-database==1.1.0",
]
[[project.authors]]
name = "233"
email = "ayusummer233@outlook.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2", "toml>=0.10.2"]

[tool.hatch.version]
path = "VERSION"

[tool.uv.workspace]
members = [
    "packages/summer_modules_core",
    "packages/summer_modules_ai",
    "packages/summer_modules_bot",
    "packages/summer_modules_markdown",
    "packages/summer_modules_charts",
    "packages/summer_modules_database",
]

[tool.uv.sources]
summer-modules-core = { workspace = true }
summer-modules-ai = { workspace = true }
summer-modules-bot = { workspace = true }
summer-modules-markdown = { workspace = true }
summer-modules-charts = { workspace = true }
summer-modules-database = { workspace = true }
