[project]
name = "summer-modules"
dynamic = ["version"]
description = "summery233's python modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "summer-modules-core==1.1.2",
    "summer-modules-ai==1.1.2",
    "summer-modules-bot==1.1.2",
    "summer-modules-markdown==1.1.2",
    "summer-modules-charts==1.1.2",
    "summer-modules-database==1.1.2",
    "summer-modules-excel==1.1.2",
    "summer-modules-prefect==1.1.2",
    "summer-modules-security==1.1.2",
    "summer-modules-ssh==1.1.2",
]
[[project.authors]]
name = "233"
email = "ayusummer233@outlook.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2", "toml>=0.10.2"]

[project.urls]
Code = "https://github.com/233Official/summer_modules"
Documentation = "https://github.com/233Official/summer_modules#readme"
Changelog = "https://github.com/233Official/summer_modules/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/233Official/summer_modules/issues"

[tool.hatch.version]
path = "VERSION"

[tool.uv.workspace]
members = [
    "packages/summer_modules_core",
    "packages/summer_modules_ai",
    "packages/summer_modules_bot",
    "packages/summer_modules_markdown",
    "packages/summer_modules_charts",
    "packages/summer_modules_database",
    "packages/summer_modules_excel",
    "packages/summer_modules_prefect",
    "packages/summer_modules_security",
    "packages/summer_modules_ssh",
]

[tool.uv.sources.summer-modules-core]
workspace = true

[tool.uv.sources.summer-modules-ai]
workspace = true

[tool.uv.sources.summer-modules-bot]
workspace = true

[tool.uv.sources.summer-modules-markdown]
workspace = true

[tool.uv.sources.summer-modules-charts]
workspace = true

[tool.uv.sources.summer-modules-database]
workspace = true

[tool.uv.sources.summer-modules-excel]
workspace = true

[tool.uv.sources.summer-modules-prefect]
workspace = true

[tool.uv.sources.summer-modules-security]
workspace = true

[tool.uv.sources.summer-modules-ssh]
workspace = true
